--- a/fincura_fdic_challenge_code.ipynb
+++ b/fincura_fdic_challenge_code.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fincura Data Science Challenge - FDIC Data"
+    "# Data Science Challenge - FDIC Data"
    ]
   },
   {
